added basic files

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,16 +10,9 @@
   <link rel="stylesheet" href="./pages/index.css">
   <title>Фрилансер Петр Федоров</title>
 </head>
+
 <body>
-<!-- Шрифты в google.fonts только в одном формате, с других сайтов стреманулся качать
-   может их правильнее через link привязать, вот код если что:
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-
-font-family: 'Roboto', sans-serif;
-
--->
+  <div class="page"></div>
 </body>
+
 </html>
