--- a/index.html
+++ b/index.html
@@ -27,7 +27,60 @@
           <div class="hero__ellipse">
             <img src="./images/section-1/avatar.jpg" alt="Киану Ривз (Петр Федоров)" class="hero__avatar">
           </div>
+        </div>
+      </section>
 
+      <section class="portfolio">
+        <div class="portfolio__container">
+          <h2 class="content-title">Выполненные проекты</h2>
+          <div class="projects">
+
+            <div class="projects__card">
+              <img src="./images/section-3/1-rectangle.jpg" alt="" class="projects__image">
+              <div class="projects__container">
+                <h3 class="projects__title">The curious corner
+                  of chamarel</h3>
+                <button class="projects__button">Посмотреть</button>
+              </div>
+            </div>
+
+            <div class="projects__card">
+              <img src="./images/section-3/2-rectangle.jpg" alt="" class="projects__image">
+              <div class="projects__container">
+                <h3 class="projects__title">Gymkhana club golf
+                  course</h3>
+                <button class="projects__button">Посмотреть</button>
+              </div>
+            </div>
+
+            <div class="projects__card">
+              <img src="./images/section-3/3-rectangle.jpg" alt="" class="projects__image">
+              <div class="projects__container">
+                <h3 class="projects__title">Tamarind falls hiking
+                  trip - full day</h3>
+                <button class="projects__button">Посмотреть</button>
+              </div>
+            </div>
+
+<!--             <div class="projects__card projects__card_name_corner-of-chamarel">
+              <h3 class="projects__title">The curious corner
+                of chamarel</h3>
+              <button class="projects__button">Посмотреть</button>
+            </div>
+
+            <div class="projects__card projects__card_name_club-golf-course">
+              <h3 class="projects__title">Gymkhana club golf
+                course</h3>
+              <button class="projects__button">Посмотреть</button>
+            </div>
+
+            <div class="projects__card projects__card_name_falls-hiking-trip">
+              <h3 class="projects__title">Tamarind falls hiking
+                trip - full day</h3>
+              <button class="projects__button">Посмотреть</button>
+            </div> -->
+
+          </div>
         </div>
       </section>
     </main>
