--- a/index.html
+++ b/index.html
@@ -13,7 +13,35 @@
 
 <body>
   <div class="page">
-
+    <header class="header">
+      <div class="header__container">
+        <a class="header__link" href="#">
+          <img class="header__discord-logo" src="./images/header/logo.svg" alt="Лого Discord">
+        </a>
+        <ul class="socials">
+          <li class="socials__item">
+            <a class="socials__link" href="#">
+              <img class="socials__icon" src="./images/header/github-icon.svg" alt="Лого Github">
+            </a>
+          </li>
+          <li class="socials__item">
+            <a class="socials__link" href="#">
+              <img class="socials__icon" src="./images/header/twitter-icon.svg" alt="Лого Twitter">
+            </a>
+          </li>
+          <li class="socials__item">
+            <a class="socials__link" href="#">
+              <img class="socials__icon" src="./images/header/instagram-icon.svg" alt="Лого Instagram">
+            </a>
+          </li>
+          <li class="socials__item">
+            <a class="socials__link" href="#">
+              <img class="socials__icon" src="./images/header/facebook-icon.svg" alt="Лого Facebook">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </header>
     <main class="content">
       <section class="hero">
         <div class="hero__contant">
