--- a/index.html
+++ b/index.html
@@ -57,7 +57,59 @@
           </div>
         </div>
       </section>
-
+      <section class="features">
+        <div class="features__container">
+          <h2 class="features__title">Со мной удобно работать</h2>
+          <ul class="features__list">
+            <li class="features__item">
+              <img class="features__image" src="./images/section-2/1-offer.svg" alt="Подписание договора">
+              <h3 class="features__item-name">По договору</h3>
+              <p class="features__text">
+                Предоставлю все документы для бухгалтерии: договоры, счета и акты.
+                Работаю как ИП без НДС.
+              </p>
+            </li>
+            <li class="features__item">
+              <img class="features__image" src="./images/section-2/2-deadline.svg" alt="Дата дедлайна">
+              <h3 class="features__item-name">Точно в срок</h3>
+              <p class="features__text">
+                В договоре прописана моя  ответственность за срок проекта.
+                Если просрочу — плачу неустойку.
+              </p>
+            </li>
+            <li class="features__item">
+              <img class="features__image" src="./images/section-2/3-agreement.svg" alt="Договорный ценник">
+              <h3 class="features__item-name">Ценник под вас</h3>
+              <p class="features__text">
+                Если у вас нетиповой проект, сделаю рассчет цены за работу и объясню,
+                как складывается цена.
+              </p>
+            </li>
+            <li class="features__item">
+              <img class="features__image" src="./images/section-2/4-steps.svg" alt="Этапы работы">
+              <h3 class="features__item-name">Промежуточные итоги</h3>
+              <p class="features__text">
+                Показываю работу поэтапно, а не в последий момент перед крайним сроком.
+              </p>
+            </li>
+            <li class="features__item">
+              <img class="features__image" src="./images/section-2/5-storage.svg" alt="Хостинг и домен">
+              <h3 class="features__item-name">Хостинг и домен</h3>
+              <p class="features__text">
+                Если мы договорились о цене проекта, в неё входит всё:
+                домен и хостинг на год + SSL сертификат.
+              </p>
+            </li>
+            <li class="features__item">
+              <img class="features__image" src="./images/section-2/6-conversation.svg" alt="Обучение и помощь">
+              <h3 class="features__item-name">Не брошу после сдачи</h3>
+              <p class="features__text">
+                Научу вас или вашего сотрудника пользоваться сайтом, запишу видео-инструкции.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
       <section class="portfolio">
         <div class="portfolio__container">
           <h2 class="content-title">Выполненные проекты</h2>
