couple fixes hero

--- a/index.html
+++ b/index.html
@@ -44,17 +44,15 @@
     </header>
     <main class="content">
       <section class="hero">
-        <div class="hero__contant">
+        <div class="hero__content">
           <div class="hero__container">
             <p class="hero__freelancer">Фрилансер</p>
             <h1 class="hero__author">Петр Федоров</h1>
             <p class="hero__description">Разрабатываю сайты для малого и среднего бизнеса. У меня можно заказать дизайн
               и верстку небольшого сайта или интернет-магазина</p>
-            <button class="hero__button">Бесплатная консультация </button>
+            <a class="hero__button" href="#">Бесплатная консультация</a>
           </div>
-          <div class="hero__ellipse">
-            <img src="./images/section-1/avatar.jpg" alt="Киану Ривз (Петр Федоров)" class="hero__avatar">
-          </div>
+          <img src="./images/section-1/avatar.jpg" alt="Киану Ривз (Петр Федоров)" class="hero__avatar">
         </div>
       </section>
       <section class="features">
