--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </ul>
       </div>
     </header>
+
     <main class="content">
       <section class="hero">
         <div class="hero__content">
@@ -55,9 +56,10 @@
           <img src="./images/section-1/avatar.jpg" alt="Киану Ривз (Петр Федоров)" class="hero__avatar">
         </div>
       </section>
+
       <section class="features">
         <div class="features__container">
-          <h2 class="features__title">Со мной удобно работать</h2>
+          <h2 class="content-title">Со мной удобно работать</h2>
           <ul class="features__list">
             <li class="features__item">
               <img class="features__image" src="./images/section-2/1-offer.svg" alt="Подписание договора">
@@ -108,6 +110,7 @@
           </ul>
         </div>
       </section>
+      
       <section class="portfolio">
         <div class="portfolio__container">
           <h2 class="content-title">Выполненные проекты</h2>
