--- a/index.html
+++ b/index.html
@@ -142,6 +142,31 @@
                     </div>
                 </div>
             </section>
+
+            <section class="gallery">
+                <div class="gallery__container">
+                    <img class="gallery__item" src="./images/section-4/Rectangle-1.jpg" alt="Стильный офис">
+                    <img class="gallery__item" src="./images/section-4/Rectangle-2.jpg" alt="Кафе">
+                    <img class="gallery__item" src="./images/section-4/Rectangle-3.jpg" alt="Совещание">
+                    <img class="gallery__item" src="./images/section-4/Rectangle-4.jpg" alt="Просторная рабочая зона">
+                    <img class="gallery__item" src="./images/section-4/Rectangle-5.jpg" alt="Вывеска Figma">
+                    <a class="gallery__link" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+                        <div class="gallery__hover">
+                            <img class="gallery__item gallery__item_type_video" src="./images/section-4/Rectangle-6.jpg" alt="Работа на ноутбуке">
+                        </div>
+                    </a>
+                    <img class="gallery__item" src="./images/section-4/Rectangle-7.jpg" alt="Офисный стелаж">
+                    <img class="gallery__item" src="./images/section-4/Rectangle-8.jpg" alt="Дизайн офиса">
+                    <img class="gallery__item" src="./images/section-4/Rectangle-9.jpg" alt="Наш сотрудник Стелла">
+                    <img class="gallery__item" src="./images/section-4/Rectangle-10.jpg" alt="Брендированая канцелярия">
+                    <a class="gallery__link" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+                        <div class="gallery__hover">
+                            <img class="gallery__item gallery__item_type_video" src="./images/section-4/Rectangle-11.jpg" alt="Вечерний вид на мост">
+                        </div>
+                    </a>
+                    <img class="gallery__item" src="./images/section-4/Rectangle-12.jpg" alt="Ланч на работе">
+                </div>
+            </section>
         </main>
 
     </div>
