--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
                     <img class="gallery__item" src="./images/section-4/Rectangle-5.jpg" alt="Вывеска Figma">
                     <a class="gallery__link" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
                         <div class="gallery__hover">
-                            <img class="gallery__item gallery__item_type_video" src="./images/section-4/Rectangle-6.jpg" alt="Работа на ноутбуке">
+                            <img class="gallery__item gallery__item_type_video" src="./images/section-4/Rectangle-6.jpg"
+                                alt="Работа на ноутбуке">
                         </div>
                     </a>
                     <img class="gallery__item" src="./images/section-4/Rectangle-7.jpg" alt="Офисный стелаж">
@@ -161,12 +162,84 @@
                     <img class="gallery__item" src="./images/section-4/Rectangle-10.jpg" alt="Брендированая канцелярия">
                     <a class="gallery__link" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
                         <div class="gallery__hover">
-                            <img class="gallery__item gallery__item_type_video" src="./images/section-4/Rectangle-11.jpg" alt="Вечерний вид на мост">
+                            <img class="gallery__item gallery__item_type_video"
+                                src="./images/section-4/Rectangle-11.jpg" alt="Вечерний вид на мост">
                         </div>
                     </a>
                     <img class="gallery__item" src="./images/section-4/Rectangle-12.jpg" alt="Ланч на работе">
                 </div>
             </section>
+
+            <footer class="footer">
+                <div class="section__container">
+                    <h2 class="content-title content-title_center">Свяжитесь со мной</h2>
+                    <div class="footer__container">
+                        <form class="form">
+                            <h3 class="form__title">Можете просто оставить заявку, я позвоню вам сегодня</h3>
+                            <fieldset class="form__contacts">
+                                <label for="user" class="form__label"></label>
+                                <input type="text" class="form__input" placeholder="Ваше имя" name="user">
+                                <label for="phone" class="form__label"></label>
+                                <input type="number" class="form__input" placeholder="Ваш телефон" name="phone">
+                            </fieldset>
+                            <button class="form__button" type="submit" value="consultation">Бесплатная
+                                консультация</button>
+                        </form>
+
+                        <div class="footer__text-container">
+                            <ul class="footer__contacts-list">
+                                <li class="footer__contact footer__contact_content_phone">
+                                    <h4 class="footer__contact-heading">Телефон</h4>
+                                    <p class="footer__contact-data">+7 999 123 45 67</p>
+                                </li>
+                                <li class="footer__contact footer__contact_content_mail">
+                                    <h4 class="footer__contact-heading">Почта</h4>
+                                    <p class="footer__contact-data">ivanov@mail.ru</p>
+                                </li>
+                                <li class="footer__contact footer__contact_content_social-network">
+                                    <h4 class="footer__contact-heading">Соцсети</h4>
+                                    <ul class="footer__contact-information">
+                                        <li class="footer__contact-data">t.me/ivanov</li>
+                                        <li class="footer__contact-data">vk.me/ivanov</li>
+                                        <li class="footer__contact-data">fb.me/ivanov</li>
+                                    </ul>
+                                </li>
+                            </ul>
+
+                            <ul class="socials socials_place_footer">
+                                <li class="socials__item">
+                                    <a class="socials__link" href="#">
+                                        <img class="socials__icon" src="./images/header/github-icon.svg"
+                                            alt="Лого Github">
+                                    </a>
+                                </li>
+                                <li class="socials__item">
+                                    <a class="socials__link" href="#">
+                                        <img class="socials__icon" src="./images/header/twitter-icon.svg"
+                                            alt="Лого Twitter">
+                                    </a>
+                                </li>
+                                <li class="socials__item">
+                                    <a class="socials__link" href="#">
+                                        <img class="socials__icon" src="./images/header/instagram-icon.svg"
+                                            alt="Лого Instagram">
+                                    </a>
+                                </li>
+                                <li class="socials__item">
+                                    <a class="socials__link" href="#">
+                                        <img class="socials__icon" src="./images/header/facebook-icon.svg"
+                                            alt="Лого Facebook">
+                                    </a>
+                                </li>
+                            </ul>
+
+                            <p class="footer__privacy">Политика конфиденциальности</p>
+                        </div>
+
+
+                    </div>
+                </div>
+            </footer>
         </main>
 
     </div>
