--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </section>
 
             <section class="features">
-                <div class="features__container">
+                <div class="section__container">
                     <h2 class="content-title">Со мной удобно работать</h2>
                     <ul class="features__list">
                         <li class="features__item">
@@ -115,7 +115,7 @@
             </section>
 
             <section class="portfolio">
-                <div class="portfolio__container">
+                <div class="section__container">
                     <h2 class="content-title">Выполненные проекты</h2>
                     <div class="portfolio__projects">
                         <article class="project">
