type input change tel

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                 <label for="user" class="form__label"></label>
                                 <input type="text" class="form__input" placeholder="Ваше имя" name="user">
                                 <label for="phone" class="form__label"></label>
-                                <input type="number" class="form__input" placeholder="Ваш телефон" name="phone">
+                                <input type="tel" class="form__input" placeholder="Ваш телефон" name="phone">
                             </fieldset>
                             <button class="form__button" type="submit" value="consultation">Бесплатная
                                 консультация</button>
