fixes wide-screen

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="page">
         <header class="header">
-            <div class="header__container">
+            <div class="header__container section-container">
                 <a class="header__link" href="#">
                     <img class="header__discord-logo" src="./images/header/logo.svg" alt="Лого Discord">
                 </a>
@@ -45,21 +45,21 @@
 
         <main class="content">
             <section class="hero">
-                <div class="hero__content">
+                <div class="hero__content section-container">
                     <div class="hero__container">
                         <p class="hero__freelancer">Фрилансер</p>
                         <h1 class="hero__author">Петр Федоров</h1>
                         <p class="hero__description">Разрабатываю сайты для малого и среднего бизнеса. У меня можно
                             заказать дизайн
                             и верстку небольшого сайта или интернет-магазина</p>
-                        <a class="hero__button" href="#">Бесплатная консультация</a>
+                        <a class="hero__button" href="#footer">Бесплатная консультация</a>
                     </div>
                     <img src="./images/section-1/avatar.jpg" alt="Киану Ривз (Петр Федоров)" class="hero__avatar">
                 </div>
             </section>
 
             <section class="features">
-                <div class="section__container">
+                <div class="section-container">
                     <h2 class="content-title">Со мной удобно работать</h2>
                     <ul class="features__list">
                         <li class="features__item">
@@ -115,7 +115,7 @@
             </section>
 
             <section class="portfolio">
-                <div class="section__container">
+                <div class="section-container">
                     <h2 class="content-title">Выполненные проекты</h2>
                     <div class="portfolio__projects">
                         <article class="project">
@@ -144,7 +144,7 @@
             </section>
 
             <section class="gallery">
-                <div class="gallery__container">
+                <div class="gallery__container section-container">
                     <img class="gallery__item" src="./images/section-4/Rectangle-1.jpg" alt="Стильный офис">
                     <img class="gallery__item" src="./images/section-4/Rectangle-2.jpg" alt="Кафе">
                     <img class="gallery__item" src="./images/section-4/Rectangle-3.jpg" alt="Совещание">
@@ -170,8 +170,8 @@
                 </div>
             </section>
 
-            <footer class="footer">
-                <div class="section__container">
+            <footer class="footer" id="footer">
+                <div class="section-container">
                     <h2 class="content-title content-title_center">Свяжитесь со мной</h2>
                     <div class="footer__container">
                         <form class="form">
