--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </div>
             </section>
 
-            <section class="gallery">
+            <section class="gallery" aria-label="Наш офис">
                 <div class="gallery__container section-container">
                     <img class="gallery__item" src="./images/section-4/Rectangle-1.jpg" alt="Стильный офис">
                     <img class="gallery__item" src="./images/section-4/Rectangle-2.jpg" alt="Кафе">
@@ -152,8 +152,7 @@
                     <img class="gallery__item" src="./images/section-4/Rectangle-5.jpg" alt="Вывеска Figma">
                     <a class="gallery__link" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
                         <div class="gallery__hover">
-                            <img class="gallery__item gallery__item_type_video" src="./images/section-4/Rectangle-6.jpg"
-                                alt="Работа на ноутбуке">
+                            <img class="gallery__item" src="./images/section-4/Rectangle-6.jpg" alt="Работа на ноутбуке">
                         </div>
                     </a>
                     <img class="gallery__item" src="./images/section-4/Rectangle-7.jpg" alt="Офисный стелаж">
@@ -162,8 +161,7 @@
                     <img class="gallery__item" src="./images/section-4/Rectangle-10.jpg" alt="Брендированая канцелярия">
                     <a class="gallery__link" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
                         <div class="gallery__hover">
-                            <img class="gallery__item gallery__item_type_video"
-                                src="./images/section-4/Rectangle-11.jpg" alt="Вечерний вид на мост">
+                            <img class="gallery__item" src="./images/section-4/Rectangle-11.jpg" alt="Вечерний вид на мост">
                         </div>
                     </a>
                     <img class="gallery__item" src="./images/section-4/Rectangle-12.jpg" alt="Ланч на работе">
