--- a/index.html
+++ b/index.html
@@ -174,12 +174,12 @@
                     <div class="footer__container">
                         <form class="form">
                             <h3 class="form__title">Можете просто оставить заявку, я позвоню вам сегодня</h3>
-                            <fieldset class="form__contacts">
+                            <div class="form__contacts">
                                 <label for="user" class="form__label"></label>
                                 <input type="text" class="form__input" placeholder="Ваше имя" name="user">
                                 <label for="phone" class="form__label"></label>
                                 <input type="tel" class="form__input" placeholder="Ваш телефон" name="phone">
-                            </fieldset>
+                            </div>
                             <button class="form__button" type="submit" value="consultation">Бесплатная
                                 консультация</button>
                         </form>
