contact-data added link

--- a/index.html
+++ b/index.html
@@ -188,18 +188,18 @@
                             <ul class="footer__contacts-list">
                                 <li class="footer__contact footer__contact_content_phone">
                                     <h4 class="footer__contact-heading">Телефон</h4>
-                                    <p class="footer__contact-data">+7 999 123 45 67</p>
+                                    <a class="footer__contact-data" href="tel:+7 999 123 45 67">+7 999 123 45 67</a>
                                 </li>
                                 <li class="footer__contact footer__contact_content_mail">
                                     <h4 class="footer__contact-heading">Почта</h4>
-                                    <p class="footer__contact-data">ivanov@mail.ru</p>
+                                    <a class="footer__contact-data" href="mailto:ivanov@mail.ru">ivanov@mail.ru</a>
                                 </li>
                                 <li class="footer__contact footer__contact_content_social-network">
                                     <h4 class="footer__contact-heading">Соцсети</h4>
                                     <ul class="footer__contact-information">
-                                        <li class="footer__contact-data">t.me/ivanov</li>
-                                        <li class="footer__contact-data">vk.me/ivanov</li>
-                                        <li class="footer__contact-data">fb.me/ivanov</li>
+                                        <li><a class="footer__contact-data" href="https://t.me/ivanov" target="_blank">t.me/ivanov</a></li>
+                                        <li><a class="footer__contact-data" href="https://vk.me/ivanov" target="_blank">vk.me/ivanov</a></li>
+                                        <li><a class="footer__contact-data" href="https://fb.me/ivanov" target="_blank">fb.me/ivanov</a></li>
                                     </ul>
                                 </li>
                             </ul>
