--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                                 </li>
                             </ul>
 
-                            <p class="footer__privacy">Политика конфиденциальности</p>
+                            <a class="footer__privacy" href="https://yandex.ru/legal/confidential/" target="_blank">Политика конфиденциальности</a>
                         </div>
 
 
