created button class

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <p class="hero__description">Разрабатываю сайты для малого и среднего бизнеса. У меня можно
                             заказать дизайн
                             и верстку небольшого сайта или интернет-магазина</p>
-                        <a class="hero__button" href="#footer">Бесплатная консультация</a>
+                        <a class="hero__button button button_place_hero" href="#footer">Бесплатная консультация</a>
                     </div>
                     <img src="./images/section-1/avatar.jpg" alt="Киану Ривз (Петр Федоров)" class="hero__avatar">
                 </div>
@@ -180,7 +180,7 @@
                                 <label for="phone" class="form__label"></label>
                                 <input type="tel" class="form__input" placeholder="Ваш телефон" name="phone">
                             </div>
-                            <button class="form__button" type="submit" value="consultation">Бесплатная
+                            <button class="button button_place_footer" type="submit" value="consultation">Бесплатная
                                 консультация</button>
                         </form>
 
