--- a/index.html
+++ b/index.html
@@ -123,21 +123,21 @@
                             of chamarel'" class="project__image">
                             <h3 class="project__title">The curious corner
                                 of chamarel</h3>
-                            <a class="project__link" href="#">Посмотреть</a>
+                            <a class="project__link" href="https://mauritiusattractions.com/curious-corner-chamarel-p-575.html" target="_blank">Посмотреть</a>
                         </article>
                         <article class="project">
                             <img src="./images/section-3/2-rectangle.jpg" alt="Проект 'Gymkhana club golf
                             course'" class="project__image">
                             <h3 class="project__title">Gymkhana club golf
                                 course</h3>
-                            <a class="project__link" href="#">Посмотреть</a>
+                            <a class="project__link" href="https://mauritiusattractions.com/gymkhana-club-golf-course-p-269.html" target="_blank">Посмотреть</a>
                         </article>
                         <article class="project">
                             <img src="./images/section-3/3-rectangle.jpg" alt="Проект 'Tamarind falls hiking
                             trip - full day'" class="project__image">
                             <h3 class="project__title">Tamarind falls hiking
                                 trip - full day</h3>
-                            <a class="project__link" href="#">Посмотреть</a>
+                            <a class="project__link" href="https://mauritiusattractions.com/hiking-trip-tamarind-falls-full-p-116.html" target="_blank">Посмотреть</a>
                         </article>
                     </div>
                 </div>
