--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                             <ul class="footer__contacts-list">
                                 <li class="footer__contact footer__contact_content_phone">
                                     <h4 class="footer__contact-heading">Телефон</h4>
-                                    <a class="footer__contact-data" href="tel:+7 999 123 45 67">+7 999 123 45 67</a>
+                                    <a class="footer__contact-data" href="tel:+79991234567">+7 999 123 45 67</a>
                                 </li>
                                 <li class="footer__contact footer__contact_content_mail">
                                     <h4 class="footer__contact-heading">Почта</h4>
