--- a/index.html
+++ b/index.html
@@ -123,21 +123,27 @@
                             of chamarel'" class="project__image">
                             <h3 class="project__title">The curious corner
                                 of chamarel</h3>
-                            <a class="project__link" href="https://mauritiusattractions.com/curious-corner-chamarel-p-575.html" target="_blank">Посмотреть</a>
+                            <a class="project__link"
+                                href="https://mauritiusattractions.com/curious-corner-chamarel-p-575.html"
+                                target="_blank">Посмотреть</a>
                         </article>
                         <article class="project">
                             <img src="./images/section-3/2-rectangle.jpg" alt="Проект 'Gymkhana club golf
                             course'" class="project__image">
                             <h3 class="project__title">Gymkhana club golf
                                 course</h3>
-                            <a class="project__link" href="https://mauritiusattractions.com/gymkhana-club-golf-course-p-269.html" target="_blank">Посмотреть</a>
+                            <a class="project__link"
+                                href="https://mauritiusattractions.com/gymkhana-club-golf-course-p-269.html"
+                                target="_blank">Посмотреть</a>
                         </article>
                         <article class="project">
                             <img src="./images/section-3/3-rectangle.jpg" alt="Проект 'Tamarind falls hiking
                             trip - full day'" class="project__image">
                             <h3 class="project__title">Tamarind falls hiking
                                 trip - full day</h3>
-                            <a class="project__link" href="https://mauritiusattractions.com/hiking-trip-tamarind-falls-full-p-116.html" target="_blank">Посмотреть</a>
+                            <a class="project__link"
+                                href="https://mauritiusattractions.com/hiking-trip-tamarind-falls-full-p-116.html"
+                                target="_blank">Посмотреть</a>
                         </article>
                     </div>
                 </div>
@@ -152,7 +158,8 @@
                     <img class="gallery__item" src="./images/section-4/Rectangle-5.jpg" alt="Вывеска Figma">
                     <a class="gallery__link" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
                         <div class="gallery__hover">
-                            <img class="gallery__item" src="./images/section-4/Rectangle-6.jpg" alt="Работа на ноутбуке">
+                            <img class="gallery__item" src="./images/section-4/Rectangle-6.jpg"
+                                alt="Работа на ноутбуке">
                         </div>
                     </a>
                     <img class="gallery__item" src="./images/section-4/Rectangle-7.jpg" alt="Офисный стелаж">
@@ -161,7 +168,8 @@
                     <img class="gallery__item" src="./images/section-4/Rectangle-10.jpg" alt="Брендированая канцелярия">
                     <a class="gallery__link" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
                         <div class="gallery__hover">
-                            <img class="gallery__item" src="./images/section-4/Rectangle-11.jpg" alt="Вечерний вид на мост">
+                            <img class="gallery__item" src="./images/section-4/Rectangle-11.jpg"
+                                alt="Вечерний вид на мост">
                         </div>
                     </a>
                     <img class="gallery__item" src="./images/section-4/Rectangle-12.jpg" alt="Ланч на работе">
@@ -176,9 +184,9 @@
                             <h3 class="form__title">Можете просто оставить заявку, я позвоню вам сегодня</h3>
                             <div class="form__contacts">
                                 <label for="user" class="form__label"></label>
-                                <input type="text" class="form__input" placeholder="Ваше имя" name="user">
+                                <input type="text" class="form__input" id="user" name="user" placeholder="Ваше имя">
                                 <label for="phone" class="form__label"></label>
-                                <input type="tel" class="form__input" placeholder="Ваш телефон" name="phone">
+                                <input type="tel" class="form__input" id="phone" name="phone" placeholder="Ваш телефон">
                             </div>
                             <button class="button button_place_footer" type="submit" value="consultation">Бесплатная
                                 консультация</button>
@@ -197,9 +205,12 @@
                                 <li class="footer__contact footer__contact_content_social-network">
                                     <h4 class="footer__contact-heading">Соцсети</h4>
                                     <ul class="footer__contact-information">
-                                        <li><a class="footer__contact-data" href="https://t.me/ivanov" target="_blank">t.me/ivanov</a></li>
-                                        <li><a class="footer__contact-data" href="https://vk.me/ivanov" target="_blank">vk.me/ivanov</a></li>
-                                        <li><a class="footer__contact-data" href="https://fb.me/ivanov" target="_blank">fb.me/ivanov</a></li>
+                                        <li><a class="footer__contact-data" href="https://t.me/ivanov"
+                                                target="_blank">t.me/ivanov</a></li>
+                                        <li><a class="footer__contact-data" href="https://vk.me/ivanov"
+                                                target="_blank">vk.me/ivanov</a></li>
+                                        <li><a class="footer__contact-data" href="https://fb.me/ivanov"
+                                                target="_blank">fb.me/ivanov</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -231,7 +242,8 @@
                                 </li>
                             </ul>
 
-                            <a class="footer__privacy" href="https://yandex.ru/legal/confidential/" target="_blank">Политика конфиденциальности</a>
+                            <a class="footer__privacy" href="https://yandex.ru/legal/confidential/"
+                                target="_blank">Политика конфиденциальности</a>
                         </div>
 
 
