--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
             </section>
 
-           <!--  <section class="features">
+            <section class="features">
                 <div class="section-container">
                     <h2 class="content-title">Со мной удобно работать</h2>
                     <ul class="features__list">
@@ -249,7 +249,7 @@
 
                     </div>
                 </div>
-            </footer> -->
+            </footer>
         </main>
 
     </div>
