--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 </div>
             </section>
 
-            <!-- <footer class="footer" id="footer">
+            <footer class="footer" id="footer">
                 <div class="section-container">
                     <h2 class="content-title content-title_center">Свяжитесь со мной</h2>
                     <div class="footer__container">
@@ -249,7 +249,7 @@
 
                     </div>
                 </div>
-            </footer> -->
+            </footer>
         </main>
 
     </div>
