--- a/index.html
+++ b/index.html
@@ -181,15 +181,14 @@
                     <h2 class="content-title content-title_center">Свяжитесь со мной</h2>
                     <div class="footer__container">
                         <form class="form">
-                            <h3 class="form__title">Можете просто оставить заявку, я позвоню вам сегодня</h3>
+                            <h3 class="form__title">Можете оставить заявку, я позвоню вам сегодня</h3>
                             <div class="form__contacts">
                                 <label for="user" class="form__label"></label>
                                 <input type="text" class="form__input" id="user" name="user" placeholder="Ваше имя">
                                 <label for="phone" class="form__label"></label>
                                 <input type="tel" class="form__input" id="phone" name="phone" placeholder="Ваш телефон">
                             </div>
-                            <button class="button button_place_footer" type="submit" value="consultation">Бесплатная
-                                консультация</button>
+                            <button class="button button_place_footer" type="submit" value="consultation">Бесплатная&nbsp;консультация</button>
                         </form>
 
                         <div class="footer__text-container">
