--- a/index.html
+++ b/index.html
@@ -188,8 +188,7 @@
                                 <label for="phone" class="form__label"></label>
                                 <input type="tel" class="form__input" id="phone" name="phone" placeholder="Ваш телефон">
                             </div>
-                            <button class="button button_place_footer" type="submit" value="consultation">Бесплатная
-                                консультация</button>
+                            <button class="button button_place_footer" type="submit" value="consultation">Бесплатная&nbsp;консультация</button>
                         </form>
 
                         <div class="footer__text-container">
