--- a/index.html
+++ b/index.html
@@ -183,12 +183,11 @@
                         <form class="form">
                             <h3 class="form__title">Можете оставить заявку, я позвоню вам сегодня</h3>
                             <div class="form__contacts">
-                                <label for="user" class="form__label"></label>
                                 <input type="text" class="form__input" id="user" name="user" placeholder="Ваше имя">
-                                <label for="phone" class="form__label"></label>
                                 <input type="tel" class="form__input" id="phone" name="phone" placeholder="Ваш телефон">
                             </div>
-                            <button class="button button_place_footer" type="submit" value="consultation">Бесплатная&nbsp;консультация</button>
+                            <button class="button button_place_footer" type="submit"
+                                value="consultation">Бесплатная&nbsp;консультация</button>
                         </form>
 
                         <div class="footer__text-container">
@@ -217,26 +216,26 @@
                             <ul class="socials socials_place_footer">
                                 <li class="socials__item socials__item_place_footer">
                                     <a class="socials__link" href="#">
-                                        <img class="socials__icon socials__icon_place_footer" src="./images/header/github-icon.svg"
-                                            alt="Лого Github">
+                                        <img class="socials__icon socials__icon_place_footer"
+                                            src="./images/header/github-icon.svg" alt="Лого Github">
                                     </a>
                                 </li>
                                 <li class="socials__item socials__item_place_footer">
                                     <a class="socials__link" href="#">
-                                        <img class="socials__icon socials__icon_place_footer" src="./images/header/twitter-icon.svg"
-                                            alt="Лого Twitter">
+                                        <img class="socials__icon socials__icon_place_footer"
+                                            src="./images/header/twitter-icon.svg" alt="Лого Twitter">
                                     </a>
                                 </li>
                                 <li class="socials__item socials__item_place_footer">
                                     <a class="socials__link" href="#">
-                                        <img class="socials__icon socials__icon_place_footer" src="./images/header/instagram-icon.svg"
-                                            alt="Лого Instagram">
+                                        <img class="socials__icon socials__icon_place_footer"
+                                            src="./images/header/instagram-icon.svg" alt="Лого Instagram">
                                     </a>
                                 </li>
                                 <li class="socials__item socials__item_place_footer">
                                     <a class="socials__link" href="#">
-                                        <img class="socials__icon socials__icon_place_footer" src="./images/header/facebook-icon.svg"
-                                            alt="Лого Facebook">
+                                        <img class="socials__icon socials__icon_place_footer"
+                                            src="./images/header/facebook-icon.svg" alt="Лого Facebook">
                                     </a>
                                 </li>
                             </ul>
@@ -244,8 +243,6 @@
                             <a class="footer__privacy" href="https://yandex.ru/legal/confidential/"
                                 target="_blank">Политика конфиденциальности</a>
                         </div>
-
-
                     </div>
                 </div>
             </footer>
