refactor portfolio added ul

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
             <section class="portfolio">
                 <div class="section-container">
                     <h2 class="content-title">Выполненные проекты</h2>
-                    <div class="portfolio__projects">
-                        <article class="project">
+                    <ul class="portfolio__projects">
+                        <li class="project">
                             <img src="./images/section-3/1-rectangle.jpg" alt="Проект 'The curious corner
                             of chamarel'" class="project__image">
                             <h3 class="project__title">The curious corner
@@ -126,8 +126,8 @@
                             <a class="project__link"
                                 href="https://mauritiusattractions.com/curious-corner-chamarel-p-575.html"
                                 target="_blank">Посмотреть</a>
-                        </article>
-                        <article class="project">
+                        </li>
+                        <li class="project">
                             <img src="./images/section-3/2-rectangle.jpg" alt="Проект 'Gymkhana club golf
                             course'" class="project__image">
                             <h3 class="project__title">Gymkhana club golf
@@ -135,8 +135,8 @@
                             <a class="project__link"
                                 href="https://mauritiusattractions.com/gymkhana-club-golf-course-p-269.html"
                                 target="_blank">Посмотреть</a>
-                        </article>
-                        <article class="project">
+                        </li>
+                        <li class="project">
                             <img src="./images/section-3/3-rectangle.jpg" alt="Проект 'Tamarind falls hiking
                             trip - full day'" class="project__image">
                             <h3 class="project__title">Tamarind falls hiking
@@ -144,8 +144,8 @@
                             <a class="project__link"
                                 href="https://mauritiusattractions.com/hiking-trip-tamarind-falls-full-p-116.html"
                                 target="_blank">Посмотреть</a>
-                        </article>
-                    </div>
+                        </li>
+                    </ul>
                 </div>
             </section>
 
