refactor scale in footer

--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
                 <ul class="socials">
                     <li class="socials__item">
                         <a class="socials__link" href="#">
-                            <img class="socials__icon" src="./images/header/github-icon.svg" alt="Лого Github">
+                            <img class="socials__icon socials__icon_place_header" src="./images/header/github-icon.svg" alt="Лого Github">
                         </a>
                     </li>
                     <li class="socials__item">
                         <a class="socials__link" href="#">
-                            <img class="socials__icon" src="./images/header/twitter-icon.svg" alt="Лого Twitter">
+                            <img class="socials__icon socials__icon_place_header" src="./images/header/twitter-icon.svg" alt="Лого Twitter">
                         </a>
                     </li>
                     <li class="socials__item">
                         <a class="socials__link" href="#">
-                            <img class="socials__icon" src="./images/header/instagram-icon.svg" alt="Лого Instagram">
+                            <img class="socials__icon socials__icon_place_header" src="./images/header/instagram-icon.svg" alt="Лого Instagram">
                         </a>
                     </li>
                     <li class="socials__item">
                         <a class="socials__link" href="#">
-                            <img class="socials__icon" src="./images/header/facebook-icon.svg" alt="Лого Facebook">
+                            <img class="socials__icon socials__icon_place_header" src="./images/header/facebook-icon.svg" alt="Лого Facebook">
                         </a>
                     </li>
                 </ul>
